--- a/blog/code_and_anime/templates/code_and_anime/video.html
+++ b/blog/code_and_anime/templates/code_and_anime/video.html
@@ -58,24 +58,24 @@ body {
   </ol>
   <div class="carousel-inner my-3">
     <div class="carousel-item active">
-      <img src="https://source.unsplash.com/1600x130/?Dark" alt="...">
+      <img src="https://source.unsplash.com/1600x130/?Pubg" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <h5>Mobile</h5>
+        <p>Hard core Gaming.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="https://source.unsplash.com/1600x130/?Hack" alt="...">
        <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>Dark Web</h5>
+        <p>Hackes and Tool.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="https://source.unsplash.com/1600x130/?Coding" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5>Coding Session</h5>
+        <p>Play with code and code play with you.</p>
       </div>
     </div>
   </div>
